@@ -463,11 +463,18 @@ class CActiveForm extends CWidget
 		if($enableClientValidation)
 		{
 			$validators=isset($htmlOptions['clientValidation']) ? array($htmlOptions['clientValidation']) : array();
-			foreach($model->getValidators($attribute) as $validator)
+
+			$attributeName = $attribute;
+			if(($pos=strrpos($attribute,']'))!==false && $pos!==strlen($attribute)-1) // e.g. [a]name
 			{
-				if($enableClientValidation && $validator->enableClientValidation)
+				$attributeName=substr($attribute,$pos+1);
+			}
+
+			foreach($model->getValidators($attributeName) as $validator)
+			{
+				if($validator->enableClientValidation)
 				{
-					if(($js=$validator->clientValidateAttribute($model,$attribute))!='')
+					if(($js=$validator->clientValidateAttribute($model,$attributeName))!='')
 						$validators[]=$js;
 				}
 			}
@@ -746,6 +753,34 @@ class CActiveForm extends CWidget
 			$model->validate($attributes);
 			foreach($model->getErrors() as $attribute=>$errors)
 				$result[CHtml::activeId($model,$attribute)]=$errors;
+		}
+		return function_exists('json_encode') ? json_encode($result) : CJSON::encode($result);
+	}
+
+	/**
+	 * Validates an array of model instances and returns the results in JSON format.
+	 * This is a helper method that simplifies the way of writing AJAX validation code for tabular input.
+	 * @param mixed $models an array of model instances.
+	 * @param array $attributes list of attributes that should be validated. Defaults to null,
+	 * meaning any attribute listed in the applicable validation rules of the models should be
+	 * validated. If this parameter is given as a list of attributes, only
+	 * the listed attributes will be validated.
+	 * @param boolean $loadInput whether to load the data from $_POST array in this method.
+	 * If this is true, the model will be populated from <code>$_POST[ModelClass][$i]</code>.
+	 * @return string the JSON representation of the validation error messages.
+	 */
+	public static function validateTabular($models, $attributes=null, $loadInput=true)
+	{
+		$result=array();
+		if(!is_array($models))
+			$models=array($models);
+		foreach($models as $i=>$model)
+		{
+			if($loadInput && isset($_POST[get_class($model)][$i]))
+				$model->attributes=$_POST[get_class($model)][$i];
+			$model->validate($attributes);
+			foreach($model->getErrors() as $attribute=>$errors)
+				$result[CHtml::activeId($model,'['.$i.']'.$attribute)]=$errors;
 		}
 		return function_exists('json_encode') ? json_encode($result) : CJSON::encode($result);
 	}
