@@ -6,12 +6,14 @@ Version 1.1.10 work in progress
 -------------------------------
 - Bug Fixed the bug introduced in 1.1.9 CActiveForm required field was not validated if left empty (mdomba)
 - Bug #1799: Better fix for bug #1799 old fix was breaking CJuiDatePicker tabular input (mdomba)
+- Bug #2284: Fixed the CActiveForm clientvalidation for tabular input (mdomba)
 - Bug #3070: Fixed the CACtiveForm JS error if there is no field rendered (mdomba)
 - Bug #3071: Fixed the bug that afterValidateAttribute was not called properly (mdomba)
 - Bug #3096: Fixed the bug when reporting an error and CHtml is not loaded (mdomba)
 - Bug #3103: Fixed the bug that CActiveForm->error() was not overloading htmlOptions (mdomba)
-- Enh: #3063: Gii, when generating models, tableNames will be checked against reserved PHP keywords when '*' is used (mdomba)
-- Enh: #3112: Fixed the exception error display on ajax calls when YII_DEBUG is true (mdomba)
+- Enh #3063: Gii, when generating models, tableNames will be checked against reserved PHP keywords when '*' is used (mdomba)
+- Enh #3112: Fixed the exception error display on ajax calls when YII_DEBUG is true (mdomba)
+- Enh: Added CActiveForm::validateTabular() to simplify ajax validation for tabular input (mdomba)
 - Chg: Upgraded JQuery UI to 1.8.17 (mdomba)
 
 Version 1.1.9 January 1, 2012
